[package]
name = "dispay-test"
version = "0.1.0"
authors = ["Reece Stevens <reecestevens24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = { git = "https://github.com/rfuest/embedded-graphics", branch="target-specific-drawables" }
cortex-m = "0.5.8"
cortex-m-rt = "0.6.10"
log = "0.4.6"
panic-semihosting = "0.5"

[dependencies.ra8875]
git = "https://github.com/reecestevens/ra8875"
branch = "accelerated-text-rendering"

[dependencies.embedded-hal]
version = "0.2.1"
features = ["unproven"]

[dependencies.stm32f4xx-hal]
version = "0.7.0"
features = ["rt", "stm32f407"]
